arrumei o botão mobile e a respnsividade

--- a/index.html
+++ b/index.html
@@ -18,13 +18,18 @@
                 <img src="./src/imgs/svg/logo-navbar.svg" alt="">
             </div>
             <div class="header-rectangle-mid"></div>
-            <div class="header-navbar-links-group">
-                <ul class="ul-links">
-                    <li class="li-links" id="selected-page"><a href="">00 HOME</a></li>
-                    <li class="li-links"><a href="">01 DESTINATION</a></li>
-                    <li class="li-links"><a href="">02 CREW</a></li>
-                    <li class="li-links"><a href="">03 TECHNOLOGY</a></li>
-                </ul>
+            <div class="menu-opener" onclick="menuOpener()"><img src="./src/imgs/svg/menu-opener.svg" alt=""></div>
+            <div class="header-navbar-links-group hide-menu">
+                <nav class="nav-area">
+                    <div class="menu-closer" onclick="menuCloser()"><img src="./src/imgs/svg/menu-closer.svg" alt=""></div>
+                    <ul class="ul-links">
+                        <li class="li-links" id="selected-page"><a href="">00 HOME</a></li>
+                        <li class="li-links"><a href="">01 DESTINATION</a></li>
+                        <li class="li-links"><a href="">02 CREW</a></li>
+                        <li class="li-links"><a href="">03 TECHNOLOGY</a></li>
+                    </ul>
+                </nav>
+                
             </div>
         </div>
     </header>
