responsivida em andamento

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="header-rectangle-mid"></div>
             <div class="menu-opener" onclick="menuOpener()"><img src="./src/imgs/svg/menu-opener.svg" alt=""></div>
-            <div class="header-navbar-links-group hide-menu">
+            <div class="header-navbar-links-group ">
                 <nav class="nav-area">
                     <div class="menu-closer" onclick="menuCloser()"><img src="./src/imgs/svg/menu-closer.svg" alt=""></div>
                     <ul class="ul-links">
